# StackChan

voice_agent/: README.md
voice_agent/backend/: .env.example  .gitignore  README.md  pyproject.toml
voice_agent/backend/prompts/: personality.md
voice_agent/backend/scripts/: fake_client.py  make_sample_wav.py  mock_server.py
voice_agent/backend/src/stackchan_voice/: config.py  db.py  gemini_live.py  gemini_live_mock.py  logging_setup.py  main.py  protocol.py  session.py  summarizer.py  vad.py  ws_server.py
voice_agent/backend/src/stackchan_voice/cli/: memory_inspect.py
voice_agent/backend/tests/: conftest.py  test_db.py  test_end_to_end.py  test_memory_inspect.py  test_protocol.py  test_session.py  test_summarizer.py  test_vad.py  test_ws_endpoint.py
voice_agent/firmware/voice_agent/: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
voice_agent/firmware/voice_agent/main/: CMakeLists.txt  Kconfig.projbuild  audio.c  audio.h  board_config.h  idf_component.yml  main.c  wifi_sta.c  wifi_sta.h  ws_client.c  ws_client.h
