[project]
name = "stackchan-voice-backend"
version = "0.1.0"
description = "Voice-agent backend for the M5Stack StackChan robot — bridges WebSocket audio from the device to Gemini Live."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "aiosqlite>=0.20",
    "google-genai>=2.5",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",  # used by fastapi.testclient.TestClient
]

[project.scripts]
stackchan-memory = "stackchan_voice.cli.memory_inspect:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stackchan_voice"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    # aiosqlite worker threads occasionally outlive the per-test event loop
    # under Starlette TestClient on Windows; the resulting warning is
    # cosmetic — the connection is closed correctly, but the thread's
    # final `call_soon_threadsafe` lands after the loop has shut down.
    # See aiosqlite#220 (upstream won't-fix).
    "ignore::pytest.PytestUnhandledThreadExceptionWarning",
]
